# Scraping_hh_with_PostgreSQL

./: .gitignore  README.md  main.py  pyproject.toml
database/: created_da_and_insert_tables.py  db_manager.py  queries.sql  query.py
loaders/: data_loader.py
src/: hh_api.py
